argo-rollouts/frontend-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend-rollout
  namespace: mern-devops
  labels:
    app: frontend
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: frontend-service-canary
      stableService: frontend-service-stable
      trafficRouting:
        nginx:
          stableIngress: rollout-nginx-stable
      steps:
      - setWeight: 20
      - pause: {} # Manual intervention step
      - setWeight: 60
      - pause: { duration: 10s } # 10 seconds pause before scaling up to 60%
      - setWeight: 100
      - pause: { duration: 10s } # 10 seconds pause before scaling up to 100%
  revisionHistoryLimit: 2 # Keep the last 2 revisions
  selector:
    matchLabels:
      app: frontend
  # Rest of the spec is similar to the Deployment spec
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: atkaridarshan04/bookstore-frontend:prod.v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
