argo-rollouts/backend-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service-stable
  namespace: mern-devops
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service-canary
  namespace: mern-devops
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
