argo-rollouts/frontend-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-stable
  namespace: mern-devops
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-canary
  namespace: mern-devops
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
