argo-rollouts/mongodb.yml
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: mongo-pv
#   namespace: mern-devops
# spec:
#   capacity:
#     storage: 1Gi
#   accessModes:
#     - ReadWriteOnce
#   persistentVolumeReclaimPolicy: Retain
#   storageClassName: manual
#   hostPath:
#     path: "/mnt/data"

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: mongo-pvc
#   namespace: mern-devops
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 1Gi
#   storageClassName: manual

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service-headless
  namespace: mern-devops
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-deployment
  namespace: mern-devops
  labels:
    app: mongodb
spec:
  serviceName: "mongodb-service-headless"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  updateStrategy:
    type: RollingUpdate   
    rollingUpdate:
      partition: 0
  template:
    metadata:
      name: mongodb
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
