argo-rollouts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-nginx-stable
  namespace: mern-devops
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service-stable
                port:
                  number: 80
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: backend-service-stable
                port:
                  number: 8000
